2007-09-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Drop extra escape on stack dump in the default error handler.
	  Fix unexpected error when parameter kahua-default-error-handler
	  is not set explicitly.

2007-09-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Change text/plain node tag from "text" to "text/plain".

2007-09-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/session.scm, doc/Modules/kahua.session.ja,
	          test/session.scm, src/kahua/server.scm, test/server.scm
	  Now session-cont-get returns two values (closure and the cont
	  has permanent URL).

	* Change: src/kahua/server.scm, test/server.scm
	  Add "X-Robots-Tag: noindex" to response header
	  when anonymous continuation entry is requested.

2007-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Fix the problem with default value of site bundle on Emacs 21.

2007-08-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/xml-template.scm
	  Procedure xml-template->sxml now can take '() or #f as
	  replacing element and they are handled as empty node.

2007-08-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/mysql.scm
	  Switch default table type from MyISAM to InnoDB.

2007-08-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm, test/redirectcont.kahua
	          test/redirectcont.scm
	  Now redirect/cont specify status code like this:
	  (redirect/cont (cont entry arg1 arg2) (status 303))

	* Change: cgi/kahua.cgi.in
	  Drop "PATH", "SERVER_ADMIN", "SERVER_SIGNATURE", "DOCUMENT_ROOT",
	  "KAHUA_DEFAULT_SITE" from metavariables explicitly.

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          cgi/kahua.cgi.in
	  Use kahua.protocol.http/worker module and drop extra(dead) code.

2007-08-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, src/Makefile.in